Update app instance service specs
