# api/openapiv2/v1-tags/apis.swagger.yaml
@@ -126,7 +126,7 @@ paths:
           in: body
           required: true
           schema:
-            $ref: '#/definitions/chorusAppInstance'
+            $ref: '#/definitions/chorusCreateAppInstanceRequest'
       tags:
         - AppInstanceService
     put:
@@ -2024,12 +2024,16 @@ definitions:
     properties:
       result:
         $ref: '#/definitions/chorusCreateAppInstanceResult'
+  chorusCreateAppInstanceRequest:
+    type: object
+    properties:
+      appInstance:
+        $ref: '#/definitions/chorusAppInstance'
   chorusCreateAppInstanceResult:
     type: object
     properties:
-      id:
-        type: string
-        format: uint64
+      appInstance:
+        $ref: '#/definitions/chorusAppInstance'
   chorusCreateAppReply:
     type: object
     properties:
@@ -2236,6 +2240,13 @@ definitions:
     type: object
     properties:
       result:
+        $ref: '#/definitions/chorusListAppInstancesResult'
+      pagination:
+        $ref: '#/definitions/chorusPaginationResult'
+  chorusListAppInstancesResult:
+    type: object
+    properties:
+      appInstances:
         type: array
         items:
           type: object
@@ -2411,6 +2422,9 @@ definitions:
         $ref: '#/definitions/chorusAppInstance'
   chorusUpdateAppInstanceResult:
     type: object
+    properties:
+      appInstance:
+        $ref: '#/definitions/chorusAppInstance'
   chorusUpdateAppReply:
     type: object
     properties:
